[gd_scene load_steps=6 format=3 uid="uid://cqjrgcofdp21m"]

[ext_resource type="Script" path="res://scenes/minigames/reactor_memory_answer/reactor_memory_answer.gd" id="1_sk1a7"]
[ext_resource type="Texture2D" uid="uid://deb3p1x24o063" path="res://scenes/minigames/reactor_memory_answer/assets/grid.png" id="3_4h6k3"]
[ext_resource type="PackedScene" uid="uid://d10w530fs7vtr" path="res://scenes/minigames/reactor_memory_answer/button.tscn" id="3_lvsqn"]
[ext_resource type="PackedScene" uid="uid://cgexmsp7251so" path="res://scenes/minigames/reactor_memory_answer/flash.tscn" id="4_wdxkn"]
[ext_resource type="PackedScene" uid="uid://cc3kuyaqojlob" path="res://scenes/minigames/reactor_memory_answer/indicator.tscn" id="5_mmqq7"]

[node name="ReactorMemoryAnswer" type="Node2D"]
script = ExtResource("1_sk1a7")
polish_name = "Zapamiętaj kolejność"

[node name="GameBackground" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="ConsoleIndicators" type="GridContainer" parent="."]
offset_left = 468.5
offset_top = 234.0
offset_right = 596.5
offset_bottom = 263.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4

[node name="Indicator" parent="ConsoleIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator2" parent="ConsoleIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator3" parent="ConsoleIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator4" parent="ConsoleIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="ConsoleBackground" type="ColorRect" parent="."]
offset_left = 445.0
offset_top = 272.5
offset_right = 620.0
offset_bottom = 447.5
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="Console" type="GridContainer" parent="."]
offset_left = 445.0
offset_top = 272.5
offset_right = 620.0
offset_bottom = 447.5
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 4

[node name="Flash1" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash2" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash3" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash4" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash8" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash9" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash10" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash11" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash12" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash13" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash14" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash15" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash16" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash17" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash18" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="Flash19" parent="Console" instance=ExtResource("4_wdxkn")]
layout_mode = 2

[node name="ConsoleGrid" type="Sprite2D" parent="."]
position = Vector2(532.25, 360.25)
texture = ExtResource("3_4h6k3")

[node name="ButtonIndicators" type="GridContainer" parent="."]
offset_left = 683.5
offset_top = 234.0
offset_right = 811.5
offset_bottom = 263.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 4

[node name="Indicator" parent="ButtonIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator2" parent="ButtonIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator3" parent="ButtonIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="Indicator4" parent="ButtonIndicators" instance=ExtResource("5_mmqq7")]
layout_mode = 2

[node name="PlayerButtons" type="GridContainer" parent="."]
offset_left = 660.0
offset_top = 272.5
offset_right = 835.0
offset_bottom = 447.5
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 4

[node name="Button1" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button2" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button3" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button4" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button5" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button6" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button7" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button8" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button9" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button10" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button11" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button12" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button13" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button14" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button15" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="Button16" parent="PlayerButtons" instance=ExtResource("3_lvsqn")]
layout_mode = 2
focus_mode = 0

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="ClearIndicatorsTimer" type="Timer" parent="."]
one_shot = true

[node name="FailureTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ClearIndicatorsTimer" to="." method="_on_ClearIndicatorsTimer_timeout"]
[connection signal="timeout" from="FailureTimer" to="." method="_on_FailureTimer_timeout"]
